# BestTeam

./: .gitignore  CMakeLists.txt  README.md  config.json
cmake/: Dependencies.cmake
docs/: ARCHITECTURE_DRAFT.md  TZ.md
include/: agent.h  config.h  http_client.h  logger.h
src/: agent.cpp  config.cpp  http_client.cpp  logger.cpp  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_environment.cpp  test_repository.cpp
